<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC966"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:src="@drawable/sidebars" />

    <!-- This is an invisible item as to prevent the name EditText from getting focused on launch and pulling up the keyboard -->
    <LinearLayout
        android:layout_width="0px"
        android:layout_height="0px"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nameHint"
                android:inputType="textCapWords"
                android:theme="@style/EditTextTheme" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/questions"
                android:textColor="@android:color/black"
                android:textSize="22sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="@string/question1"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/question_one_checkbox_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="questionOne"
                        android:text="@string/q1_band1" />

                    <CheckBox
                        android:id="@+id/question_one_checkbox_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="questionOne"
                        android:text="@string/q1_band2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/question_one_checkbox_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="questionOne"
                        android:text="@string/q1_band3" />

                    <CheckBox
                        android:id="@+id/question_one_checkbox_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="questionOne"
                        android:text="@string/q1_band4" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="@string/question2"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question_two_radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q2_A" />

                <RadioButton
                    android:id="@+id/question_two_radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q2_B" />

                <RadioButton
                    android:id="@+id/question_two_radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q2_C" />

                <RadioButton
                    android:id="@+id/question_two_radio_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q2_D" />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:text="@string/question3"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/pfalbum" />

            <EditText
                android:id="@+id/question_three_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/albumHint"
                android:inputType="textCapWords"
                android:theme="@style/EditTextTheme" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/holo_orange_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:text="@string/question4"
                android:textSize="16sp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question_four_radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q4_A" />

                <RadioButton
                    android:id="@+id/question_four_radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q4_B" />

                <RadioButton
                    android:id="@+id/question_four_radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:text="@string/q4_C" />

            </RadioGroup>

            <Button
                android:id="@+id/score_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/score"
                android:onClick="quizScore"/>

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scaleType="fitXY"
        android:scaleX="-1"
        android:scaleY="-1"
        android:src="@drawable/sidebars" />

</LinearLayout>
